deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lcc-service
  labels:
    app: lcc
spec:
  type: ClusterIP
  selector:
    app: lcc
  ports:
    - name: http
      port: 80
      targetPort: 8000
